# SOTA

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tablet.json
CNN/: classes.pickle
docs/: CALIBRATION.md  tablet_oracle_worksheet.md
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.js
optimizer/: ALGORITHM.md
server/: API.md  Dockerfile  requirements.txt
server/app/: __init__.py  main.py
sota/: cli.py
sota/data/: artifacts.json  combos.json  idmap.json  slabs_raw.json  tablets.json
sota/evaluate/: effects.py  levels.py  score.py  special.py
sota/model/: gamedata.py  grid.py  layout.py  pool.py
sota/recognize/: classifier.py  dataset.py  keymap.py  pool_from_labels.py  recognize.py  slots.py  train.py
sota/render/: grid_image.py  icons.py  summary.py
sota/solve/: ga.py  (+5 more)
tests/: test_artifact_parse.py  test_classifier_smoke.py  test_cli.py  test_dataset.py  test_effects_pos.py  test_effects_shape.py  test_effects_shape_rotation.py  test_fitness.py  test_ga.py  test_ga_smoke.py  test_gamedata.py  test_genome.py  test_grid.py  test_grid_image.py  test_icons.py  test_idmap.py  test_init.py  test_keymap.py  test_layout.py  test_legality.py  test_levels.py  test_operators.py  test_oracle_golden.py  test_pool.py  test_pool_from_labels.py  test_recognize_cli.py  test_reconcile.py  test_referential_integrity.py  test_score.py  test_slots.py  test_special.py  test_summary.py  test_tablet_effect_data.py  test_tablet_normalize.py  test_tablet_snapshots.py  test_web_api.py  test_web_services.py
tools/: gen_tablet_snapshots.py
(+52 files in other folders)
