[project]
name = "sota"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["playwright>=1.44", "requests>=2.31", "pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.29", "python-multipart>=0.0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
